--- a/src/components/MainPage.css
+++ b/src/components/MainPage.css
@@ -6,10 +6,10 @@
   font-style: normal;
   font-weight: normal;
   src: local('SEGA LOGO FONT'), url('../containers/SEGA.woff') format('woff');
-  }
+}
 
 h1 {
   font-family: 'SEGA LOGO FONT';
   font-weight: 200;
-  color: #fffffe;
+  color: white;
 }
