--- a/src/components/Card.css
+++ b/src/components/Card.css
@@ -8,3 +8,17 @@
     #5679f9
   );
 }
+@media (max-width: 750px) {
+  .phablet {
+    flex: 0 0 66.66667%;
+    max-width: 66.66667%;
+    left: 3.5rem;
+  }
+}
+@media (min-width: 751px) and (max-width: 1000px) {
+  .phablet {
+    flex: 0 0 66.66667%;
+    max-width: 36%;
+    left: 3.5rem;
+  }
+}
